# Buckshot_Roulette_Arduino

./: README.md
ESP32/src/: CommonData.cpp  CommonData.h  CommonDataType.cpp  CommonDataType.h  CommonLibrary.cpp  CommonLibrary.h  CommonService.cpp  Entity.h
ESP32/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h
ESP32/src/ui/images/: ui_img_adrenaline_png.c  ui_img_beer_png.c  ui_img_block_png.c  ui_img_burnerphone_png.c  ui_img_cigarette_png.c  ui_img_expiredmedicine_png.c  ui_img_handcuffs_png.c  ui_img_handsaw_png.c  ui_img_hide_png.c  ui_img_inverter_png.c  ui_img_load_png.c  ui_img_magnifyingglass_png.c  ui_img_metal_table_png.c  ui_img_metal_turntable_png.c  ui_img_shotgun_block_png.c  ui_img_shotgunback_png.c  ui_img_shotguncut_png.c
ESP32/src/ui/screens/: ui_Main.c  ui_Main.h  ui_Start.c
Project/: Buckshot_Roulette_Project.sll  Buckshot_Roulette_Project.spj  Buckshot_Roulette_Project_events.py
Simulator/LvglWindowsDesktopApplication/: LvglWindowsDesktopApplication.cpp  LvglWindowsDesktopApplication.vcxproj  LvglWindowsDesktopApplication.vcxproj.filters
